force-app/main/default/objects/Tenant__c/fields/Contact_Informatiom__c.field-meta.xml
<CustomField>
    <fullName>Contact_Informatiom__c</fullName>
    <label>Contact Informatiom</label>
    <type>Phone</type>
</CustomField>