force-app/main/default/objects/Tenant__c/fields/Tenant_Name__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Name__c</fullName>
    <label>Tenant Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>