force-app/main/default/objects/Tenant__c/fields/Total_Leases__c.field-meta.xml
<CustomField>
    <fullName>Total_Leases__c</fullName>
    <label>Total Leases</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>